--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,40 @@
 .App {
   text-align: center;
+  display: grid;
+  grid-template-rows: 100px 70px auto;
 }
 
-.App-logo {
-  height: 40vmin;
+header {
+  border: 2px solid green;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav {
+  border: 2px solid blue;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 5px;
+  padding: 2px;
+}
+
+main {
+  border: 2px solid red;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 5px;
 }
 
-.App-link {
-  color: #09d3ac;
+article {
+  border: 2px solid purple;
+  margin: 5px;
+  display: flex;
+  flex-direction: column;
+}
+
+h4 {
+  text-align: center;
+}
+
+article:articledata {
+  flex-direction: row;
 }
