--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,59 @@ h4 {
   text-align: center;
 }
 
-article:articledata {
+.articleData {
+  display: flex;
   flex-direction: row;
+  justify-content: space-around;
+}
+
+.commentCard {
+  border: 2px solid aqua;
+  margin: 5px;
+}
+
+.options {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-around;
+}
+
+.userCard {
+  border: 2px solid orange;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 10px;
+  margin: 5px;
+}
+
+.userCard img {
+  height: 100px;
+  width: 100px;
+  border: 2px solid black;
+}
+
+.votes {
+  display: flex;
+  flex-direction: row;
+}
+
+.votes img {
+  height: 20px;
+  width: 20px;
+  margin: 2px;
+}
+
+.votes button {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 10px;
+  height: 30px;
+  width: 20px;
+}
+
+.votes button:disabled {
+  background: darkgrey;
+  margin: 10px;
+  height: 30px;
+  width: 20px;
 }
