--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,12 @@
 
 header {
   border: 2px solid green;
+  display: grid;
+  grid-template-columns: repeat(3 1fr);
+}
+
+header p {
+  grid-column: 3/3;
 }
 
 nav {
@@ -39,11 +45,13 @@ h4 {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  width: 100%;
 }
 
 .commentCard {
   border: 2px solid aqua;
   margin: 5px;
+  width: 100%;
 }
 
 .options {
@@ -58,6 +66,7 @@ h4 {
   justify-content: space-evenly;
   padding: 10px;
   margin: 5px;
+  width: 100%;
 }
 
 .userCard img {
@@ -69,6 +78,7 @@ h4 {
 .votes {
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
 
 .votes img {
@@ -82,12 +92,58 @@ h4 {
   justify-content: space-evenly;
   margin: 10px;
   height: 30px;
-  width: 20px;
+  width: 30px;
 }
 
-.votes button:disabled {
+button:disabled {
   background: darkgrey;
+}
+
+input[type="text"],
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  resize: vertical;
+}
+
+input[type="submit"] {
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
   margin: 10px;
-  height: 30px;
-  width: 20px;
+}
+
+.formContainer {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  margin: 5px;
+  border: 2px solid black;
+}
+
+.col-25 {
+  float: left;
+  width: 20%;
+  margin-top: 6px;
+}
+
+.col-25 label {
+  font-size: "100";
+}
+
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
