--- a/src/App.css
+++ b/src/App.css
@@ -108,6 +108,18 @@ textarea {
   box-sizing: border-box;
   resize: vertical;
 }
+.custom-select {
+  width: 75%;
+  float: right;
+  padding: 12px;
+  margin: 10px;
+  margin-top: 6px;
+}
+.custom-select select {
+  width: 100%;
+  float: center;
+  padding: 12px;
+}
 
 input[type="submit"] {
   padding: 12px 20px;
@@ -148,7 +160,7 @@ input[type="submit"] {
   clear: both;
 }
 
-.deleted {
+.confirmation {
   height: 100px;
   border: 2px solid blueviolet;
   border-radius: 5px;
@@ -160,4 +172,8 @@ input[type="submit"] {
 
 button {
   margin: 5px;
+}
+
+.errHandler {
+  border: 2px solid green;
 }
