--- a/src/App.css
+++ b/src/App.css
@@ -139,6 +139,8 @@ main {
 .usercard {
   border: 2px solid black;
   display: float;
+  margin: 5px;
+  border-radius: 5px;
 }
 
 .usercardData {
@@ -149,7 +151,8 @@ main {
 }
 
 .usercardData img {
-  max-height: 150px;
+  height: 150px;
+  width: 150px;
   border: 2px solid black;
   border-radius: 10px;
   margin: 10px;
