--- a/src/App.css
+++ b/src/App.css
@@ -26,11 +26,10 @@ a:active {
 
 header {
   display: grid;
-  margin: 5px;
   grid-row: 1/1;
   background-color: #b2c2bf;
   color: white;
-  border-radius: 5px;
+  padding-bottom: 20px;
 }
 
 header img {
@@ -44,47 +43,8 @@ button {
 }
 
 nav {
-  display: grid;
-  grid-template-columns: repeat(4 1fr);
-  grid-template-rows: repeat(2 1fr);
-  margin: 5px;
-  border-radius: 5px;
-}
-
-.topics {
-  display: flex;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-  flex-direction: row;
-  background-color: #3b3a30;
   position: sticky;
 }
-
-.topicItem {
-  border: 2px solid black;
-  background-color: #b2c2bf;
-  margin-left: 5px;
-  margin-right: 0px;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  display: flex;
-  padding-left: 5px;
-  padding-right: 5px;
-  flex-direction: column;
-  justify-content: center;
-  text-decoration: none;
-  border-radius: 5px;
-  grid: auto;
-}
-
-.topicButton {
-  display: flex;
-  padding-top: 12px;
-  padding-bottom: 10px;
-  align-self: flex-end;
-  margin: 5px;
-}
-
 main {
   display: flex;
   flex-direction: column;
@@ -118,6 +78,42 @@ main {
   padding-left: 15px;
 }
 
+.topics-container {
+  background-color: #3b3a30;
+  display: flex;
+  justify-content: space-between;
+}
+
+.topics {
+  display: flex;
+  width: fit-content;
+  justify-content: flex-start;
+}
+
+.topicItem {
+  flex-direction: row;
+  border: 2px solid black;
+  background-color: #b2c2bf;
+  margin-left: 5px;
+  margin-right: 0px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-radius: 5px;
+}
+
+.topicRight {
+  display: flex;
+  width: fit-content;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+.topicButton {
+  padding-top: 12px;
+  padding-bottom: 10px;
+  margin: 5px;
+}
 .userBarButtons {
   float: right;
   padding-right: 15px;
@@ -172,10 +168,6 @@ main {
   flex-direction: column;
   justify-content: center;
   background-color: #c0ded9;
-}
-
-.topics {
-  grid-row: 1/2;
 }
 
 .votes button {
