--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 .App {
-  min-height: 100%;
+  min-height: 100vh;
   min-width: 320px;
   text-align: center;
-  display: grid;
-  grid-template-rows: 100px 50px 70px auto;
+  /* display: grid;
+  grid-template-rows: 100px 50px 70px auto; */
   font-size: 12px;
   text-decoration: none;
   background-color: #eaece5;
@@ -61,7 +61,7 @@ main {
 
 .options button {
   display: flex;
-  flex-direction: row;
+  /* flex-direction: row; */
   min-width: 70px;
 }
 
