--- a/src/App.css
+++ b/src/App.css
@@ -124,11 +124,25 @@ main {
   padding-top: 12px;
   padding-bottom: 10px;
   margin: 5px;
+  max-height: 75%;
+}
+.topicButton button {
+  border: 2px solid black;
+  background-color: #b2c2bf;
+}
+
+.topicButton button:hover {
+  background-color: #eaece5;
 }
 .userBarButtons {
   float: right;
   padding-right: 15px;
   padding-top: 7px;
+}
+
+.userBarButtons button {
+  border: 1px solid black;
+  margin: 2px;
 }
 .cardHolder {
   display: flex;
@@ -139,9 +153,11 @@ main {
 .card {
   display: grid;
   grid-template-columns: 7fr auto;
+  grid-template-rows: 30% 52% 18%;
   border: 2px solid black;
   margin: 5px;
   border-radius: 5px;
+  min-height: 150px;
   max-width: 700px;
   width: 70vw;
   min-width: 300px;
@@ -159,6 +175,14 @@ main {
   padding-left: 20px;
   grid-column: 1/1;
 }
+
+.cardButtons {
+  display: flex;
+  grid-row: 3/3;
+  justify-content: space-around;
+
+  margin: 3px;
+}
 .usercard {
   border: 2px solid black;
   display: float;
@@ -170,22 +194,34 @@ main {
 }
 
 .usercardData {
-  display: flex;
+  display: grid;
+  grid-template-columns: 50% 50%;
   justify-content: space-between;
-  margin-left: 50px;
-  margin-right: 50px;
 }
 
 .usercardData img {
-  height: 150px;
-  width: 150px;
-  border: 2px solid black;
+  /* min-height: 100px;
+  min-width: 100px; */
+  max-height: 80%;
+  max-width: 80%;
   border-radius: 10px;
   margin: 10px;
-  float: right;
+}
+
+.usercardImageholder {
+  min-width: 100px;
+  min-height: 100px;
+  max-width: 80%;
+  max-height: 80%;
+  border: 2px solid black;
+  background-color: white;
+  margin: 5px;
+
+  justify-self: flex-end;
 }
 .votes {
   grid-column-start: 2;
+  grid-row-start: span 2;
   display: flex;
   padding: 5px;
   flex-direction: column;
@@ -219,21 +255,12 @@ button:disabled {
 
 input[type="text"],
 textarea {
-  min-width: 280px;
   padding: 12px;
+  min-width: 60vw;
   border: 1px solid #cccccc;
   border-radius: 4px;
   resize: none;
-}
-.custom-select {
-  width: 75%;
-  float: left;
-  margin-top: 6px;
-}
-.custom-select select {
-  width: 100%;
-  float: left;
-  padding: 12px;
+  margin: 2px;
 }
 
 input[type="submit"] {
@@ -246,27 +273,17 @@ input[type="submit"] {
 }
 
 .formContainer {
+  display: flex;
+  flex-direction: column;
   border-radius: 5px;
   background-color: #f2f2f2;
-  padding: 20px;
+  padding: 10px;
   margin: 5px;
   border: 2px solid black;
 }
 
-.col-25 {
-  float: left;
-  width: 20%;
-  margin-top: 6px;
-}
-
-.col-25 label {
-  font-size: "100";
-}
-
-.col-75 {
-  float: left;
-  width: 75%;
-  margin-top: 6px;
+.formContainer select {
+  min-width: 60vw;
 }
 
 .row:after {
@@ -284,6 +301,7 @@ input[type="submit"] {
   justify-content: space-around;
   margin: 5px;
   font-size: 20px;
+  width: 70vw;
 }
 
 .errText {
