--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,6 @@ header {
   grid-row: 1/1;
   background-color: #b2c2bf;
   color: white;
-  padding-bottom: 20px;
   grid-column: span 3;
 }
 
@@ -149,17 +148,34 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: fit-content;
+  justify-content: center;
+  min-height: 200px;
+  max-height: 100%;
 }
 
+.cardButtonsDelete {
+  padding-left: 30px;
+  display: flex;
+  grid-row: 3/3;
+  justify-content: space-around;
+  margin: 3px;
+}
+
+.cardHolderConfirm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-height: 100%;
+}
 .card {
   display: grid;
   grid-template-columns: 7fr auto;
-  grid-template-rows: 30% 52% 18%;
+  grid-template-rows: auto auto 30px;
   border: 2px solid black;
   margin: 5px;
   border-radius: 5px;
-  min-height: 150px;
+  min-height: fit-content;
+  max-height: 100%;
   max-width: 700px;
   width: 70vw;
   min-width: 300px;
@@ -167,16 +183,20 @@ main {
 .card header {
   margin: 0px;
   border-radius: 0px;
-  font-stretch: wider;
   padding: 0;
   width: 100%;
+  height: 100%;
   grid-column: span 2;
+  grid-row: 1/2;
 }
+
 .cardData {
   text-align: center;
-  padding-left: 20px;
+  padding-left: 10px;
+  padding-right: 5px;
   grid-column: 1/1;
-  min-height: fit-content;
+  min-height: max-content;
+  grid-row: 2/3;
 }
 
 .cardButtons {
@@ -259,7 +279,7 @@ button:disabled {
 input[type="text"],
 textarea {
   padding: 12px;
-  min-width: 60vw;
+  min-width: 70%;
   border: 1px solid #cccccc;
   border-radius: 4px;
   resize: none;
@@ -283,6 +303,8 @@ input[type="submit"] {
   padding: 10px;
   margin: 5px;
   border: 2px solid black;
+  max-width: 690px;
+  min-width: 70%;
 }
 
 .formContainer select {
@@ -305,6 +327,7 @@ input[type="submit"] {
   margin: 5px;
   font-size: 20px;
   width: 70vw;
+  max-width: 700px;
 }
 
 .errText {
